# cogito

./: .gitignore  CMakeLists.txt  README.md  keyword.cpp  keyword.gperf  main.gperf  main.h
src/: .clangd  keywords_hash.h  lexer.cpp  lexer.h  main.cpp  parser.h  token.h
tests/: lexer_tests.cpp
